tests/NormalTests/paczka1/fuzzy1/68020536.err
Error in line 4: nlgD1k1ecA S533 -5,2
Error in line 12: 8lgYW S159 38,88
Error in line 2: nlgD1k1ecA S533 95,4
Error in line 22: nlgD1k1ecA S856 85,3
Error in line 27: b0ju87ObQw S856 134,88
Error in line 17: S159 S159 29,2
Error in line 39: nlgD1k1ecA S159 69,4
